--- a/ExploIFP3.html
+++ b/ExploIFP3.html
@@ -754,7 +754,7 @@
                 <p>Crée un avatar qui représente tes forces, tes intérêts et les métiers qui t'inspirent.</p>
             </div>
             <button class="download-button" onclick="downloadActivityPdf('mon-avatar')">
-                <span>⬇️</span>Télécharger la fiche PDF
+                <span>⬇️</span>Fiche Pédagogique Mon Avatar.pdf
             </button>
             <div class="activity-content">
                 <div class="activity-section">
@@ -811,7 +811,7 @@
                 <p>Explore les secteurs de formation professionnelle et fais des liens avec tes aspirations.</p>
             </div>
             <button class="download-button" onclick="downloadActivityPdf('20t1-secteurs')">
-                <span>⬇️</span>Télécharger la fiche PDF
+                <span>⬇️</span>Fiche Pédagogique 20T1 secteurs.pdf
             </button>
             <div class="activity-content">
                 <div class="activity-section">
@@ -869,7 +869,7 @@
                 <p>Démystifie les croyances autour de la formation professionnelle grâce à des échanges dynamiques.</p>
             </div>
             <button class="download-button" onclick="downloadActivityPdf('mythes-et-realites')">
-                <span>⬇️</span>Télécharger la fiche PDF
+                <span>⬇️</span>Fiche Pédagogique Mythes Et Realites.pdf
             </button>
             <div class="activity-content">
                 <div class="activity-section">
@@ -927,7 +927,7 @@
                 <p>Identifie ton profil RIASEC et relie-le aux métiers présentés dans la plateforme.</p>
             </div>
             <button class="download-button" onclick="downloadActivityPdf('riasec')">
-                <span>⬇️</span>Télécharger la fiche PDF
+                <span>⬇️</span>Fiche Pédagogique RIASEC.pdf
             </button>
             <div class="activity-content">
                 <div class="activity-section">
@@ -985,7 +985,7 @@
                 <p>Plonge dans des milieux de travail grâce à des vidéos immersives pour enrichir ta réflexion sur la formation professionnelle.</p>
             </div>
             <button class="download-button" onclick="downloadActivityPdf('fp360')">
-                <span>⬇️</span>Télécharger la fiche PDF
+                <span>⬇️</span>Fiche Pédagogique 360FP.pdf
             </button>
             <div class="activity-content">
                 <div class="activity-section">
@@ -1045,7 +1045,7 @@
                 <p>Comprends les différentes voies de formation et planifie ton cheminement scolaire.</p>
             </div>
             <button class="download-button" onclick="downloadActivityPdf('systeme-scolaire')">
-                <span>⬇️</span>Télécharger la fiche PDF
+                <span>⬇️</span>Fiche Pédagogique Système Scolaire.pdf
             </button>
             <div class="activity-content">
                 <div class="activity-section">
@@ -1313,43 +1313,43 @@
 
         const activityPdfConfig = {
             "mon-avatar": {
-                markdownPath: "ActivteORI/Mon-avatar/fiche-pedagogique.md",
-                pdfPath: "ActivteORI/Mon-avatar/FichePedagogiqueMonAvatar.pdf",
+                markdownPath: "ActivteORI/Mon-Avatar/FichePedagogiqueMonAvatar.md",
+                pdfPath: "ActivteORI/Mon-Avatar/FichePedagogiqueMonAvatar.pdf",
                 filename: "Activite_Mon_avatar.pdf",
                 title: "Activité Mon avatar",
                 inlineMarkdownId: "markdown-mon-avatar"
             },
             "20t1-secteurs": {
-                markdownPath: "ActivteORI/20T1-secteurs/fiche-pedagogique.md",
+                markdownPath: "ActivteORI/20T1-secteurs/FichePedagogique20T1secteurs.md",
                 pdfPath: "ActivteORI/20T1-secteurs/FichePedagogique20T1secteurs.pdf",
                 filename: "Activite_20T1_secteurs.pdf",
                 title: "Activité 20T1 secteurs",
                 inlineMarkdownId: "markdown-20t1-secteurs"
             },
             "mythes-et-realites": {
-                markdownPath: "ActivteORI/Mythes-et-realites/fiche-pedagogique.md",
-                pdfPath: "ActivteORI/Mythes-et-realites/FichePedagogiqueMythesEtRealites.pdf",
+                markdownPath: "ActivteORI/Mythes-Et-Realites/FichePedagogiqueMythesEtRealites.md",
+                pdfPath: "ActivteORI/Mythes-Et-Realites/FichePedagogiqueMythesEtRealites.pdf",
                 filename: "Activite_Mythes_et_realites.pdf",
                 title: "Activité Mythes et réalités",
                 inlineMarkdownId: "markdown-mythes-et-realites"
             },
             "riasec": {
-                markdownPath: "ActivteORI/RIASEC/fiche-pedagogique.md",
+                markdownPath: "ActivteORI/RIASEC/FichePedagogiqueRIASEC.md",
                 pdfPath: "ActivteORI/RIASEC/FichePedagogiqueRIASEC.pdf",
                 filename: "Activite_RIASEC.pdf",
                 title: "Activité RIASEC",
                 inlineMarkdownId: "markdown-riasec"
             },
             "fp360": {
-                markdownPath: "ActivteORI/360FP/fiche-pedagogique.md",
+                markdownPath: "ActivteORI/360FP/FichePedagogique360FP.md",
                 pdfPath: "ActivteORI/360FP/FichePedagogique360FP.pdf",
                 filename: "Activite_FP360.pdf",
                 title: "Activité FP360",
                 inlineMarkdownId: "markdown-fp360"
             },
             "systeme-scolaire": {
-                markdownPath: "ActivteORI/Systeme-scolaire/fiche-pedagogique.md",
-                pdfPath: "ActivteORI/Systeme-scolaire/FichePedagogiqueSystemeScolaire.pdf",
+                markdownPath: "ActivteORI/Systeme-Scolaire/FichePedagogiqueSystemeScolaire.md",
+                pdfPath: "ActivteORI/Systeme-Scolaire/FichePedagogiqueSystemeScolaire.pdf",
                 filename: "Activite_Systeme_scolaire.pdf",
                 title: "Activité Système scolaire",
                 inlineMarkdownId: "markdown-systeme-scolaire"
