Adjust activity PDF viewers to fit page

--- a/ExploIFP3.html
+++ b/ExploIFP3.html
@@ -313,6 +313,7 @@
         .pdf-viewer {
             width: 100%;
             min-height: 70vh;
+            height: 100vh;
             margin-top: 20px;
             border-radius: 15px;
             overflow: hidden;
@@ -735,7 +736,7 @@
             </button>
             <div class="activity-content">
                 <div class="pdf-viewer">
-                    <iframe src="ActivteORI/Mon-Avatar/FichePedagogiqueMonAvatar.pdf" title="Fiche pédagogique Mon Avatar" loading="lazy"></iframe>
+                    <iframe src="ActivteORI/Mon-Avatar/FichePedagogiqueMonAvatar.pdf#zoom=page-fit" title="Fiche pédagogique Mon Avatar" loading="lazy"></iframe>
                 </div>
                 <p class="pdf-viewer-fallback">
                     Si le document ne s'affiche pas, <a href="ActivteORI/Mon-Avatar/FichePedagogiqueMonAvatar.pdf" target="_blank" rel="noopener">téléchargez-le en format PDF</a>.
@@ -753,7 +754,7 @@
             </button>
             <div class="activity-content">
                 <div class="pdf-viewer">
-                    <iframe src="ActivteORI/20T1-secteurs/FichePedagogique20T1secteurs.pdf" title="Fiche pédagogique 20T1 secteurs" loading="lazy"></iframe>
+                    <iframe src="ActivteORI/20T1-secteurs/FichePedagogique20T1secteurs.pdf#zoom=page-fit" title="Fiche pédagogique 20T1 secteurs" loading="lazy"></iframe>
                 </div>
                 <p class="pdf-viewer-fallback">
                     Si le document ne s'affiche pas, <a href="ActivteORI/20T1-secteurs/FichePedagogique20T1secteurs.pdf" target="_blank" rel="noopener">téléchargez-le en format PDF</a>.
@@ -771,7 +772,7 @@
             </button>
             <div class="activity-content">
                 <div class="pdf-viewer">
-                    <iframe src="ActivteORI/Mythes-Et-Realites/FichePedagogiqueMythesEtRealites.pdf" title="Fiche pédagogique Mythes et réalités" loading="lazy"></iframe>
+                    <iframe src="ActivteORI/Mythes-Et-Realites/FichePedagogiqueMythesEtRealites.pdf#zoom=page-fit" title="Fiche pédagogique Mythes et réalités" loading="lazy"></iframe>
                 </div>
                 <p class="pdf-viewer-fallback">
                     Si le document ne s'affiche pas, <a href="ActivteORI/Mythes-Et-Realites/FichePedagogiqueMythesEtRealites.pdf" target="_blank" rel="noopener">téléchargez-le en format PDF</a>.
@@ -789,7 +790,7 @@
             </button>
             <div class="activity-content">
                 <div class="pdf-viewer">
-                    <iframe src="ActivteORI/RIASEC/FichePedagogiqueRIASEC.pdf" title="Fiche pédagogique RIASEC" loading="lazy"></iframe>
+                    <iframe src="ActivteORI/RIASEC/FichePedagogiqueRIASEC.pdf#zoom=page-fit" title="Fiche pédagogique RIASEC" loading="lazy"></iframe>
                 </div>
                 <p class="pdf-viewer-fallback">
                     Si le document ne s'affiche pas, <a href="ActivteORI/RIASEC/FichePedagogiqueRIASEC.pdf" target="_blank" rel="noopener">téléchargez-le en format PDF</a>.
@@ -807,7 +808,7 @@
             </button>
             <div class="activity-content">
                 <div class="pdf-viewer">
-                    <iframe src="ActivteORI/360FP/FichePedagogique360FP.pdf" title="Fiche pédagogique FP360" loading="lazy"></iframe>
+                    <iframe src="ActivteORI/360FP/FichePedagogique360FP.pdf#zoom=page-fit" title="Fiche pédagogique FP360" loading="lazy"></iframe>
                 </div>
                 <p class="pdf-viewer-fallback">
                     Si le document ne s'affiche pas, <a href="ActivteORI/360FP/FichePedagogique360FP.pdf" target="_blank" rel="noopener">téléchargez-le en format PDF</a>.
@@ -825,7 +826,7 @@
             </button>
             <div class="activity-content">
                 <div class="pdf-viewer">
-                    <iframe src="ActivteORI/Systeme-Scolaire/FichePedagogiqueSystemeScolaire.pdf" title="Fiche pédagogique Système scolaire" loading="lazy"></iframe>
+                    <iframe src="ActivteORI/Systeme-Scolaire/FichePedagogiqueSystemeScolaire.pdf#zoom=page-fit" title="Fiche pédagogique Système scolaire" loading="lazy"></iframe>
                 </div>
                 <p class="pdf-viewer-fallback">
                     Si le document ne s'affiche pas, <a href="ActivteORI/Systeme-Scolaire/FichePedagogiqueSystemeScolaire.pdf" target="_blank" rel="noopener">téléchargez-le en format PDF</a>.
