--- a/ExploIFP3.html
+++ b/ExploIFP3.html
@@ -312,7 +312,7 @@
 
         .pdf-viewer {
             width: 100%;
-            min-height: 70vh;
+            height: 75vh;
             margin-top: 20px;
             border-radius: 15px;
             overflow: hidden;
@@ -735,7 +735,7 @@
             </button>
             <div class="activity-content">
                 <div class="pdf-viewer">
-                    <iframe src="ActivteORI/Mon-Avatar/FichePedagogiqueMonAvatar.pdf" title="Fiche pédagogique Mon Avatar" loading="lazy"></iframe>
+                    <iframe src="ActivteORI/Mon-Avatar/FichePedagogiqueMonAvatar.pdf#zoom=page-fit" title="Fiche pédagogique Mon Avatar" loading="lazy"></iframe>
                 </div>
                 <p class="pdf-viewer-fallback">
                     Si le document ne s'affiche pas, <a href="ActivteORI/Mon-Avatar/FichePedagogiqueMonAvatar.pdf" target="_blank" rel="noopener">téléchargez-le en format PDF</a>.
@@ -753,7 +753,7 @@
             </button>
             <div class="activity-content">
                 <div class="pdf-viewer">
-                    <iframe src="ActivteORI/20T1-secteurs/FichePedagogique20T1secteurs.pdf" title="Fiche pédagogique 20T1 secteurs" loading="lazy"></iframe>
+                    <iframe src="ActivteORI/20T1-secteurs/FichePedagogique20T1secteurs.pdf#zoom=page-fit" title="Fiche pédagogique 20T1 secteurs" loading="lazy"></iframe>
                 </div>
                 <p class="pdf-viewer-fallback">
                     Si le document ne s'affiche pas, <a href="ActivteORI/20T1-secteurs/FichePedagogique20T1secteurs.pdf" target="_blank" rel="noopener">téléchargez-le en format PDF</a>.
@@ -771,7 +771,7 @@
             </button>
             <div class="activity-content">
                 <div class="pdf-viewer">
-                    <iframe src="ActivteORI/Mythes-Et-Realites/FichePedagogiqueMythesEtRealites.pdf" title="Fiche pédagogique Mythes et réalités" loading="lazy"></iframe>
+                    <iframe src="ActivteORI/Mythes-Et-Realites/FichePedagogiqueMythesEtRealites.pdf#zoom=page-fit" title="Fiche pédagogique Mythes et réalités" loading="lazy"></iframe>
                 </div>
                 <p class="pdf-viewer-fallback">
                     Si le document ne s'affiche pas, <a href="ActivteORI/Mythes-Et-Realites/FichePedagogiqueMythesEtRealites.pdf" target="_blank" rel="noopener">téléchargez-le en format PDF</a>.
@@ -789,7 +789,7 @@
             </button>
             <div class="activity-content">
                 <div class="pdf-viewer">
-                    <iframe src="ActivteORI/RIASEC/FichePedagogiqueRIASEC.pdf" title="Fiche pédagogique RIASEC" loading="lazy"></iframe>
+                    <iframe src="ActivteORI/RIASEC/FichePedagogiqueRIASEC.pdf#zoom=page-fit" title="Fiche pédagogique RIASEC" loading="lazy"></iframe>
                 </div>
                 <p class="pdf-viewer-fallback">
                     Si le document ne s'affiche pas, <a href="ActivteORI/RIASEC/FichePedagogiqueRIASEC.pdf" target="_blank" rel="noopener">téléchargez-le en format PDF</a>.
@@ -807,7 +807,7 @@
             </button>
             <div class="activity-content">
                 <div class="pdf-viewer">
-                    <iframe src="ActivteORI/360FP/FichePedagogique360FP.pdf" title="Fiche pédagogique FP360" loading="lazy"></iframe>
+                    <iframe src="ActivteORI/360FP/FichePedagogique360FP.pdf#zoom=page-fit" title="Fiche pédagogique FP360" loading="lazy"></iframe>
                 </div>
                 <p class="pdf-viewer-fallback">
                     Si le document ne s'affiche pas, <a href="ActivteORI/360FP/FichePedagogique360FP.pdf" target="_blank" rel="noopener">téléchargez-le en format PDF</a>.
@@ -825,7 +825,7 @@
             </button>
             <div class="activity-content">
                 <div class="pdf-viewer">
-                    <iframe src="ActivteORI/Systeme-Scolaire/FichePedagogiqueSystemeScolaire.pdf" title="Fiche pédagogique Système scolaire" loading="lazy"></iframe>
+                    <iframe src="ActivteORI/Systeme-Scolaire/FichePedagogiqueSystemeScolaire.pdf#zoom=page-fit" title="Fiche pédagogique Système scolaire" loading="lazy"></iframe>
                 </div>
                 <p class="pdf-viewer-fallback">
                     Si le document ne s'affiche pas, <a href="ActivteORI/Systeme-Scolaire/FichePedagogiqueSystemeScolaire.pdf" target="_blank" rel="noopener">téléchargez-le en format PDF</a>.
@@ -1709,6 +1709,28 @@ filename: "technicien-en-logistique-du-transport-profil.jpg", video: "https://ww
         }
 
         // Affichage des métiers d'un secteur
+        function adjustActivePdfViewer() {
+            requestAnimationFrame(() => {
+                const activeView = document.querySelector('.activity-view.active');
+                if (!activeView) {
+                    return;
+                }
+
+                const viewer = activeView.querySelector('.pdf-viewer');
+                if (!viewer) {
+                    return;
+                }
+
+                viewer.style.height = '';
+
+                const rect = viewer.getBoundingClientRect();
+                const availableHeight = window.innerHeight - rect.top - 24;
+
+                const finalHeight = availableHeight > 0 ? availableHeight : Math.max(window.innerHeight * 0.6, 400);
+                viewer.style.height = `${finalHeight}px`;
+            });
+        }
+
         function showMetiers(sectorKey) {
             const sector = sectorsData[sectorKey];
 
@@ -1745,11 +1767,13 @@ filename: "technicien-en-logistique-du-transport-profil.jpg", video: "https://ww
 
             document.querySelectorAll('.activity-view').forEach(view => {
                 view.style.display = 'none';
+                view.classList.remove('active');
             });
 
             const targetView = document.getElementById(activity.id);
             if (targetView) {
                 targetView.style.display = 'block';
+                targetView.classList.add('active');
             }
 
             updateNavbarTitle(activity.title);
@@ -1765,6 +1789,9 @@ filename: "technicien-en-logistique-du-transport-profil.jpg", video: "https://ww
             }
 
             window.scrollTo({ top: 0, behavior: 'smooth' });
+
+            adjustActivePdfViewer();
+            setTimeout(adjustActivePdfViewer, 300);
 
             return false;
         }
@@ -1823,6 +1850,7 @@ filename: "technicien-en-logistique-du-transport-profil.jpg", video: "https://ww
 
             document.querySelectorAll('.activity-view').forEach(view => {
                 view.style.display = 'none';
+                view.classList.remove('active');
             });
 
             updateNavbarTitle(defaultNavbarTitle);
@@ -1905,9 +1933,11 @@ filename: "technicien-en-logistique-du-transport-profil.jpg", video: "https://ww
 
         // Gestion du redimensionnement
         window.addEventListener('resize', function() {
+            adjustActivePdfViewer();
+
             const currentTitle = document.querySelector('.navbar-title').textContent;
             if (document.getElementById('metiers-view').style.display === 'block') {
-                const sectorKey = Object.keys(sectorsData).find(key => 
+                const sectorKey = Object.keys(sectorsData).find(key =>
                     sectorsData[key].name.startsWith(currentTitle.replace('...', ''))
                 );
                 if (sectorKey) {
@@ -1915,6 +1945,8 @@ filename: "technicien-en-logistique-du-transport-profil.jpg", video: "https://ww
                 }
             }
         });
+
+        window.addEventListener('orientationchange', adjustActivePdfViewer);
 /* === Clic sur n'importe quelle carte .metier-card :
    si l'image est un "*-profil.jpg" qui a une propriété `video` dans allMetiersData,
    on ouvre la vidéo YouTube en autoplay dans un nouvel onglet. === */
