--- a/ExploIFP3.html
+++ b/ExploIFP3.html
@@ -275,12 +275,12 @@
         }
 
         .activity-content {
-            max-width: 1000px;
-            margin: 0 auto;
-            background: rgba(255, 255, 255, 0.95);
-            border-radius: 20px;
-            padding: 30px;
-            box-shadow: 0 10px 30px rgba(0, 0, 0, 0.12);
+            max-width: none;
+            margin: 0;
+            background: transparent;
+            border-radius: 0;
+            padding: 0;
+            box-shadow: none;
             color: #2c3e50;
             line-height: 1.6;
         }
@@ -312,18 +312,18 @@
 
         .pdf-viewer {
             width: 100%;
-            min-height: 70vh;
-            height: 100vh;
+            min-height: 75vh;
+            height: auto;
             margin-top: 20px;
-            border-radius: 15px;
-            overflow: hidden;
-            box-shadow: 0 10px 30px rgba(0, 0, 0, 0.15);
-            background: #f4f6fb;
+            border-radius: 0;
+            overflow: visible;
+            box-shadow: none;
+            background: transparent;
         }
 
         .pdf-viewer iframe {
             width: 100%;
-            height: 100%;
+            min-height: 75vh;
             border: none;
         }
 
